--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
 <body>
     <center><h1 class="big uppercase">Agni</h1></center>
+    <header>
+        <a href="C:\Users\PIYUSH\Documents\GitHub\Web-Superhero\Courses.html" target="blank"><h2>Courses</h2></a>
+        <a href="https://forms.gle/jx9tozh1WC3FM24E7" target="blank"><h2>Sign Up For demo</h2></a>
+        <a href="C:\Users\PIYUSH\Documents\GitHub\Web-Superhero\Pricing.html" target="blank"><h2>Pricing</h2></a>
+    </header>
+    <footer>This site is an edtech site created to instruct 3D Softweres &copy;Agni
+        
+    </footer>
     
 </body>
 </html>
