--- a/Courses.html
+++ b/Courses.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <title>Courses</title>
+    <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
-    <h1>Maya</h1>
+    <h1 class="big">Maya</h1>
     <ul>
         <h2>Module 1: Introduction to Autodesk Maya </h2>
         <h3>Understanding the Interface</h3>
@@ -27,7 +28,7 @@
         <li>Achieve secondary shape.</li>
         <li>Finalize details.</li>
     
-
+        <h1 class="big">Zbrush</h1>
         <h2>Understanding the Interface</h2>
             <li>Overview of the workspace</li>
             <li>Customization options</li>
@@ -38,7 +39,7 @@
             <li>Sculpting of Rocks</li>
 
 
-    <h1>Substance</h1>
+            <h1 class="big">Substance</h1>
         <h2>Understanding the Interface</h2>
             <li>Overview of the workspace</li>
             <li>Customization options</li>
@@ -48,7 +49,7 @@
             <li>Introduction to Smart Materials</li>
 
     
-    <h1>Blender</h1>
+    <h1  class="big">Blender</h1>
     <h3>Understanding the Interface</h3>
         <li>Overview of the workspace</li>
         <li>Customization options</li>
