only agni content

--- a/Courses.html
+++ b/Courses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Courses</title>
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/Agni.css">
 </head>
 <body>
     <h1 class="big">Maya</h1>
