--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Animation and Graphics Native Institute</title>
-    <link rel="stylesheet" href="css/test.css">
+    <link rel="stylesheet" href="css/Agni.css">
 </head>
 <body>
     <center><h1 class="big uppercase">Agni</h1></center>
@@ -11,8 +11,8 @@
         <a href="https://forms.gle/jx9tozh1WC3FM24E7" target="blank"><h2>Sign Up For demo</h2></a>
         <a href="C:\Users\PIYUSH\Documents\GitHub\Web-Superhero\Pricing.html" target="blank"><h2>Pricing</h2></a>
     </header>
-    <footer>This site is an edtech site created to instruct 3D Softweres &copy;Agni
-        
+    <footer>This site is an edtech site created to instruct 3D Softweres &copy; Agni
+
     </footer>
     
 </body>
