BATCHTIMINGS AND FEES

--- a/Pricing.html
+++ b/Pricing.html
@@ -2,15 +2,33 @@
 <html lang="en">
 <head>
     <title>Pricing</title>
+    <link rel="stylesheet" href="css/Agni.css">
 </head>
 <body>
-    <h1>Maya</h1> <center>INR ₹99</center>
-
-    <h1>Zbrush</h1>
-        <img src="C:\Users\PIYUSH\Documents\GitHub\Web-Superhero\images\zlogo.png" height="50px">
-    <h1>Substance</h1>
-
-    <h1>Blender</h1>
+    <h1>Maya INR ₹99</h1>
+    batches <ul>
+        <li>MWF 11.30am-12.30pm</li>
+        <li>MWF 12.30pm-1.30pm</li>
+        <li>MWF 1.30pm-2.30pm</li>
+        <li>MWF 2.30pm-3.30pm</li></ul>
+    <h1>Substance INR ₹149</h1>
+    batches <ul>
+        <li>MWF 3.30pm-4.30pm</li>
+        <li>MWF 4.30pm-5.30pm</li>
+        <li>MWF 5.30pm-6.30pm</li>
+        <li>MWF 6.30pm-7.30pm</li></ul>
+    <h1>Blender INR ₹199</h1>
+    batches <ul>
+        <li>TTS 11.30am-12.30pm</li>
+        <li>TTS 12.30pm-1.30pm</li>
+        <li>TTS 1.30pm-2.30pm</li>
+        <li>TTS 2.30pm-3.30pm</li></ul>
+    <h1>Zbrush INR ₹239</h1>
+    batches <ul>
+        <li>TTS 3.30pm-4.30pm</li>
+        <li>TTS 4.30pm-5.30pm</li>
+        <li>TTS 5.30pm-6.30pm</li>
+        <li>TTS 6.30pm-7.30pm</li></ul>
 
 </body>
 </html>
