--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,11 +10,11 @@
 <body>
     <header><img src="images/IMG-20230206-WA0046.jpg" alt="" height="150">
         <h1>PIYUSH GUPTA</h1>
+        
     </header>
     <h2>About me</h2>
-    <h3>I am a 3D artist, graphic designer, photographer.Currently I am
-        working as a freelancer. I am fresher and working as 3D
-        modeling and texturing artist</h3>
+    <h3>I am a Fresher in 3D modeling and texturing, always eager to learn and passionate about keeping up with the latest technology. <br>
+         Currently, I am working as a freelance artist for a 3D printing company.</h3>
         <h2>Artstation</h2>
         <a href="https://www.artstation.com/arsenalone">Piyush Gupta</a>
         <h2>Softwares</h2>
